# pdathome_gait

./: q  .env  .gitignore  README.md  env_sample  pyproject.toml
ipynb_scripts/pipeline/: 0.preparing_data.ipynb  1.preprocessing_gait_detection.ipynb  2.detect_gait.ipynb  3.preprocessing_filtering_gait.ipynb  4.filtering_gait.ipynb
notebooks/pipeline/: 2.detect_gait.ipynb
paper_results/: filtering_gait.ipynb  gait_detection.ipynb  quantification.ipynb
paper_results/generate_results/: bash_script.sh  filtering_gait.ipynb  gait_detection.ipynb  generate_results.ipynb  generate_results.py  quantification.ipynb
paper_results/notebooks/: filtering_gait.ipynb  gait_detection.ipynb  quantification.ipynb
paper_results/py_scripts/: generate_results.py
pipeline/: 1.preprocessing_gait_detection.ipynb  2.detect_gait.ipynb  3.preprocessing_filtering_gait.ipynb  4.filtering_gait.ipynb
pipeline/notebooks/: 0.preparing_data.ipynb  1.preprocessing_gait_detection.ipynb  2.detect_gait.ipynb  3.preprocessing_filtering_gait.ipynb  4.filtering_gait.ipynb  5.quantification.ipynb
pipeline/py_scripts/: bash_script.sh  run_pipeline.py
py_scripts/: bash_script.sh  run_pipeline.py
py_scripts/pipeline/: 0.preparing_data.py  bash_script.sh  run_pipeline.py
src/pdathome/: classification.py  constants.py  evaluation.py  load.py  preprocessing.py  quantification.py  utils.py
