[tool.poetry]
name = "pd-at-home"
version = "0.1.0"
description = ""
authors = ["Erikpostt <erik_post_6@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
paradigma = "^0.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
