[tool.poetry]
name = "pd-at-home"
version = "0.1.0"
description = ""
authors = ["Erikpostt <erik_post_6@hotmail.com>"]
readme = "README.md"
packages = [{include = "pdathome", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
paradigma = { path = "C:/Users/erik_/Documents/PhD/code/paradigma", develop = true }
python-dotenv = "^1.0.1"
h5py = "^3.11.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
