[tool.poetry]
name = "pd-at-home"
version = "0.1.0"
description = ""
authors = ["Erikpostt <erik_post_6@hotmail.com>"]
readme = "README.md"
packages = [{include = "pdathome", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
paradigma = { git = "https://github.com/biomarkersParkinson/paradigma", branch = "arm-swing-quantification" }
python-dotenv = "^1.0.1"
h5py = "^3.11.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pingouin = "^0.5.5"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
